# vbrpytools

./: .gitattributes  .gitignore  CONTRIBUTE.md  LICENSE  README.md  __init__.py  dicjsontools.py  exceltojson.py  misctools.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: publish.yaml
Src/vbrpytools/: __init__.py  dicjsontools.py  exceltojson.py  misctools.py
Src/vbrsupport/: dicjsontools.py  exceltojson.py  misctools.py
Src/vbrtools/: dicjsontools.py  exceltojson.py  exceptions.py  misctools.py
tests/: __init__.py  testdicjsontools.py  testexceltojson.py  testjson.py  testmisc.py
tests/resources/: test.xlsx
