[build-system]
requires = ["hatchling", "hatch-pyinstaller>=1.1.0.dev1"]
build-backend = "hatchling.build"

[project.scripts]
exceltojson = "vbrpytools.exceltojson:_exceltojson"

[tool.hatch.build.targets.pyinstaller]
require-runtime-dependencies = true
flags = ["--clean", "--onefile"]
scriptname = "src/vbrpytools/exceltojson.py"

[project]
name = "vbrpytools"
# dynamic = ["version", "dependencies"]  # dependencies cannot be set dynamic because of error with pyinstaller
dynamic = ["version"]
dependencies = ["humanize>=4.10.0", "openpyxl>=3.1.5"]
description = "Package grouping functions that I'm using in multiple places"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = []
authors = [
  { name="Vincent Brettnacher", email="vincent.brettnacher@veoneer.com" },
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License"
]

[tool.hatch.version]
path = "src/vbrpytools/__init__.py"