[build-system]
requires = ["hatchling",
            "hatch-pyinstaller",
            "hatch-semver"]
build-backend = "hatchling.build"

[project.scripts]
exceltojson = "vbrpytools.exceltojson:_exceltojson"

[tool.hatch.build.targets.pyinstaller]
require-runtime-dependencies = true
flags = ["--clean", "--onefile", "--noconfirm"]
scriptname = "src/vbrpytools/exceltojson.py"
specpath = "./.spec"
zip = true

[project]
name = "vbrpytools"
dynamic = ["version"]
dependencies = ["humanize>=4.10.0", "openpyxl>=3.1.5"]
description = "Package grouping functions that I'm using in multiple places"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["tools", "utilities","personal","development"]
authors = [
  { name="Vincent Brettnacher", email="vincent.brettnacher@veoneer.com" },
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License"
]

[project.urls]
Documentation = "https://github.com/vbrett/vbrpytools/blob/master/README.md"
source = "https://github.com/vbrett/vbrpytools"
Repository = "https://github.com/vbrett/vbrpytools.git"
Issues = "https://github.com/vbrett/vbrpytools/issues"

[tool.hatch.version]
path = "Src/vbrpytools/__init__.py"
scheme = "semver"